# actris_mwr_pro

./: .gitignore  .pylintrc  README.md  __init__.py  actris_process_mwr.sh  atmos.py  global_nc.py  process.py  process_mwr_pro.py  pyproject.toml  read_specs.py  rpg_mwr.py  setup.py  site_config.py  utils.py
.github/workflows/: ci.yaml
level1/: __init__.py  global_nc.py  lev1_meta_nc.py  met_quality_control.py  meta_nc.py  quality_control.py  rpg_bin.py  rpg_mwr.py  site_config.py  tb_offset.py  write_lev1_nc.py
level2/: get_ret_coeff.py  lev2_meta_nc.py  lwp_offset.py  write_lev2_nc.py
mwr_pro_idl_v04/: par_mwr_pro.pro  pl_mk_template.sh  readme  setup_mwr_pro.sh  setup_new_meas.sh  sort_hatpro_raw_data.sh  tb_offset_xxx.sav
mwr_pro_idl_v04/source/: @x  abshum_to_rh.pro  average.pro  aztp.pro  bias.pro  closest.pro  col1  collabel2.pro  colorbar1.pro  cosmo_bias.pro  date_time_to_juldat.pro  dbz_2_byte.pro  dbz_2_byte_t.pro  get_blb.pro  get_brt.pro  get_coeff_level2a.pro  get_coeff_level2a_nc.pro  get_coeff_level2b.pro  get_coeff_level2b_nc.pro  get_coeff_level2c.pro  get_coeff_level2c_nc.pro  get_dec.pro  get_hkd.pro  get_irt.pro  get_log_mod.pro  get_met.pro  get_prev_date.pro  get_res.pro  get_rpg.pro  get_spec.pro  iwv_calc.pro  loadcol.pro  make_bgyr_ct.pro  offset_lwp.pro  p_ts.pro  par_mwr_pro.pro  par_mwr_pro_jue.pro  pl_mk.pro  plot_cont.pro  plot_cont_ts.pro  (+25 more)
mwr_pro_idl_v04/uncertainty/: tb_bias_jue_20130101.sav  tb_cov_jue_20130613.sav
mwrpy/: __init__.py  atmos.py  constants.py  mwrpy.py  process_mwr_pro.py  process_mwrpy.py  rpg_mwr.py  utils.py  version.py
mwrpy/level1/: lev1_meta_nc.py  met_quality_control.py  quality_control.py  rpg_bin.py  tb_offset.py  write_lev1_nc.py
mwrpy/level2/: __init__.py  get_ret_coeff.py  (+3 more)
plots/: __init__.py  generate_plots.py  plot_meta.py
site_config/: juelich.py  read_specs.py
(+61 files in other folders)
